- add char type for utf-8 encoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 
 add_executable(${PROJECT_NAME}
 	./src/main.cpp
+	./src/utf8_char.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
