--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 add_executable(${PROJECT_NAME}
 	./src/main.cpp
 	./src/utf8_char.cpp
+	./src/tokenize.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
