--- a/functional_test/CMakeLists.txt
+++ b/functional_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 
-project(limescript CXX)
+project(functional_test CXX)
 
 if (MSVC)
 	set(CMAKE_CXX_FLAGS "/std:c++20 /EHsc /DWIN64")
@@ -10,13 +10,15 @@ endif()
 
 add_executable(${PROJECT_NAME}
 	./src/main.cpp
-	./src/utf8_char.cpp
-	./src/tokenize.cpp
-	./src/parser.cpp
-	./src/asm.cpp
-	./src/types.cpp
+	./src/functional_test_manager.cpp
+	./src/functional_test.cpp
+
+	../src/utf8_char.cpp
+	../src/tokenize.cpp
+	../src/parser.cpp
+	../src/asm.cpp
+	../src/types.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
-
-add_subdirectory(functional_test)
+target_include_directories(${PROJECT_NAME} PUBLIC ../include)
